==============================================================================
    TAME Changelog
    (C) 2019 Matt Tropiano
==============================================================================

0.9BETA20
.........

	- Fixed: TimeFormat()'s "K" character did not give correct values for hours.

0.9BETA19
.........

	- Added: Raw Strings.
	- Added: RegExReplace() function.
	- Added: Passages!
	- Fixed: Some operations gave incorrect error messages in the Java implementation.
	- Fixed: BadParameterException's class name was fixed. D'oh!
	- Fixed: Some build shell scripts referred to an incorrect template path.
	- Changed: StrFormat() is now StrParam().
	- Changed: StrParam() now uses '{}' instead of '[]' for replace tokens.


0.9BETA18
.........

	- Added: TAME Project (tamep).
	- Fixed: JS exporter path resolution problems.


0.9BETA17
.........

	- Fixed: (CONTINUE) not disappearing when control returned to user in JS
	  shell.


0.9BETA16
.........

	- Fixed: Made TimeFormat() consistent across implementations.
	- Changed: Removed some unnecessary time functions.


0.9BETA15
.........

	- Fixed: The power operator (**) was being parsed as a valid delimiter,
	  but not an operator.
	- Fixed: The single equals (=) should not have been considered a binary
	  expression operator.


0.9BETA14
.........

	- Fixed ListAddAt() with a negative index - now it returns false, since
	  nothing is added.
	- Added ListNew(), IsRegex(), RegexFind(), RegexFindLast(), RegexGet(), 
	  RegexGetLast(), RegexGetAll(), RegexMatches(), and RegexSplit() 
	  functions.
	
	
0.9BETA13
.........

	- STRREPLACE() now replaces every occurrence of a string in both Java and 
	  JS.
	- Added STRFORMAT() for formatting strings.
	- SUBSTRING() behavior was changed to clamp start and end indices, if end 
	  is equal to or before start, returns empty string.
	- All OS/Java distributions can now have their "tame" and "tamec" scripts 
	  symlinked to safely.


0.9BETA12
.........
